force-app/main/incentive-program/objects/Incentive_Task_Catalog__mdt/Incentive_Task_Catalog__mdt.object-meta.xml
<CustomObject>
    <label>Incentive Task Catalog</label>
    <pluralLabel>Incentive Task Catalog</pluralLabel>
</CustomObject>