force-app/main/incentive-program/objects/Incentive_Task_Catalog__mdt/fields/Default_Number_of_Points__c.field-meta.xml
<CustomField>
    <fullName>Default_Number_of_Points__c</fullName>
    <label>Default Number of Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>