force-app/main/incentive-program/objects/Incentive_Task_Catalog__mdt/fields/History_Description_Label__c.field-meta.xml
<CustomField>
    <fullName>History_Description_Label__c</fullName>
    <label>History Description Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>