force-app/main/incentive-program/objects/Incentive_Task_Catalog__mdt/fields/Participant_ID_required__c.field-meta.xml
<CustomField>
    <fullName>Participant_ID_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Participant ID required</label>
    <type>Checkbox</type>
</CustomField>