force-app/main/incentive-program/objects/Incentive_Task_Catalog__mdt/fields/Title_Label__c.field-meta.xml
<CustomField>
    <fullName>Title_Label__c</fullName>
    <label>Title Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>